Changes in 1.6

 - Added PLY mesh reader and writer

 - Ensure ListBox on combo box doesn't hang off the bottom of the GUI root, by Matthias Specht

 - Made IGUIElements recalculate clipping rectangle after setNotClipped, reported by Aelis440

 - Bug fix for the combo box where it showed white text instead of skin colour before being focused, fix posted by drewbacca

 - EGDS_MESSAGE_BOX_HEIGHT is now honoured, bug reported by Spkka

 - Fixed a bug in the edit box where events are sometimes sent to a null parent, reported by Sudi.

 - Coordinate system fix for OpenGL in SDL device

 - Added generic console device. You can now use Irrlicht to create and manipuate graphics on a shell where no graphics hardware 
   or windowing system is available. To enable it uncomment #define _IRR_USE_CONSOLE_DEVICE_ in IrrCompileConfig.h

Changes in 1.6 TA
	- implemented isALoadableFileFormat ( File *file ) for the Archive Loader
Changes in 1.6 TA
	- PixelBlend16 and PixelBlend16_simd are working for the new rules.
	- bugfix. CLightSceneNode didn't correctly update it's attributes
	
		Lighting Linear Attenuation.	= 1.f / radius
		
		The Example loadirr files set the lightscene radius to 1000.f but
		stays on the previous default attentuation with the older radius 100 -> 1.f / 100
		so the examples looks golden-brown.
		
		Now the radius is correctly!! set to the attenuation of 1.f/1000.f because the
		file doesn't have special attenuation. and now it looks more yellow.
		can anybody show me a correct screenshot for this file;-)? Niko?
		
		Or is this behavior the default lighting?. then it would be
		a fixed constant linear attenuation of 0.01f;-). Please clearify
		For now i didn't fixed it
		
		
		I encountered this behavior because i ( burning video ) used the original radius
		for calculations and so i've found that radius != 1.f / linearAttenuation but
		in the LightSceneNode this formula was used.. confused;-)
		

	- vector template and equals tests